<resources>
    <string name="app_name">HUB@KDU</string>
    <string name="tv_kdu">KDU</string>
    <string name="tv_id">Student ID :</string>
    <string name="tv_password">Password :</string>
    <string name="et_id">Enter ID Here</string>
    <string name="et_pass">Enter Password Here</string>
    <string name="cb_remember">Remember me</string>
    <string name="btn_login">Login</string>
    <string name="tv_mainMenu">Main Menu</string>
    <string name="tv_invoice">MY INVOICES</string>
    <string name="tv_session">Session :</string>
    <string name="btn_payNow">Pay Now</string>
    <string name="btn_payHist">Payment History</string>
    <string name="tv_announcement">Announcement</string>
    <string name="tv_payMethod">Payment Method</string>
    <string name="btn_pay1">Card Payment</string>
    <string name="btn_pay2">Online Banking</string>
    <string name="tv_pay1">Credit / Debit </string>
    <string name="et_cardNum">Card Number</string>
    <string name="et_nameCard">Name On Card</string>
    <string name="et_expiration">(MM/YY)</string>
    <string name="et_cvv">CVV</string>
    <string name="tv_totalAmt">Total Amount :</string>
    <string name="tv_onlineBank">Online Banking</string>
    <string name="tv_precaution">Please ensure you have the following</string>
    <string name="tv_precaution1">1. Activate online banking account and password</string>
    <string name="tv_precaution2">2. Upload mobile registered with the bank</string>
    <string name="tv_precaution3">3. Sufficient bank balance</string>
    <string name="rb_bank1">Maybank</string>
    <string name="rb_bank2">CIMB Bank</string>
    <string name="rb_bank3">Public Bank</string>
    <string name="rb_bank4">RHB Bank</string>
    <string name="rb_bank5">AmBank</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="tv_paymentHist">Payment History</string>
</resources>
