<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pay1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_cvv"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="68dp"
            android:ems="10"
            android:hint="@string/et_cvv"
            android:inputType="number"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nameCard"
            android:background="@drawable/edittext_blueborder"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_expiration"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/et_expiration"
            android:inputType="number"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nameCard"
            android:background="@drawable/edittext_blueborder"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_pay1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_pay1"
            android:textColor="@color/white"
            android:background="#60FFFFFF"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_cardNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/et_cardNum"
            android:inputType="number"
            android:textSize="25sp"
            android:background="@drawable/edittext_blueborder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pay1"
            android:paddingLeft="5dp"/>

        <EditText
            android:id="@+id/et_nameCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/et_nameCard"
            android:inputType="textPersonName"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_cardNum"
            android:background="@drawable/edittext_blueborder"
            android:paddingLeft="5dp"/>

        <Button
            android:id="@+id/btn_pay1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/numans"
            android:text="@string/btn_payNow"
            android:textColor="#FFFAFA"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/menu_navigation"
        android:layout_gravity="start"
        android:id="@+id/nv">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>