<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pay2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_onlineBank">

            <TextView
                android:id="@+id/tv_precaution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/tv_precaution"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_onlineBank" />

            <TextView
                android:id="@+id/tv_precaution1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tv_precaution1"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_precaution" />

            <TextView
                android:id="@+id/tv_precaution2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tv_precaution2"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_precaution1" />

            <TextView
                android:id="@+id/tv_precaution3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tv_precaution3"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_precaution2" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="283dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_pay2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/tv_bank1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="140dp"
                android:layout_marginTop="0dp"
                android:text="@string/rb_bank1"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_bank2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignStart="@+id/tv_bank1"
                android:layout_below="@+id/tv_bank1"
                android:layout_marginStart="-1dp"
                android:layout_marginTop="0dp"
                android:text="@string/rb_bank2"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_bank3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignStart="@+id/tv_bank1"
                android:layout_below="@+id/tv_bank2"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/rb_bank3"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_bank4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignStart="@+id/tv_bank1"
                android:layout_below="@+id/tv_bank3"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/rb_bank4"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_bank5"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignStart="@+id/tv_bank1"
                android:layout_below="@+id/tv_bank4"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/rb_bank5"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/img_bank1"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                app:srcCompat="@drawable/maybank" />

            <ImageView
                android:id="@+id/img_bank2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignBottom="@+id/tv_bank2"
                android:layout_alignStart="@+id/img_bank1"
                android:layout_below="@+id/img_bank1"
                android:layout_marginBottom="-1dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/cimb" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignBottom="@+id/tv_bank3"
                android:layout_alignStart="@+id/img_bank1"
                android:layout_below="@+id/img_bank2"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="1dp"
                app:srcCompat="@drawable/publicbank" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignBottom="@+id/tv_bank4"
                android:layout_alignStart="@+id/img_bank1"
                android:layout_below="@+id/imageView3"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="3dp"
                app:srcCompat="@drawable/rhb" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/img_bank1"
                android:layout_below="@+id/imageView4"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="4dp"
                app:srcCompat="@drawable/ambank" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_onlineBank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/tv_onlineBank"
            android:textAlignment="center"
            android:background="#40FFFFFF"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_pay2"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/numans"
            android:text="@string/btn_payNow"
            android:textColor="#FFFAFA"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/rg_bank"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_pay2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <RadioButton
                android:id="@+id/rb_bank1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_bank2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_bank3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_bank4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_bank5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1" />

        </RadioGroup>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/menu_navigation"
        android:layout_gravity="start"
        android:id="@+id/nv">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>